--- a/GraphTester.vcxproj
+++ b/GraphTester.vcxproj
@@ -147,6 +147,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="LEARNT.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="classes.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
