Successful trial of Swastic_Find

--- a/GraphTester.vcxproj
+++ b/GraphTester.vcxproj
@@ -148,6 +148,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="LEARNT.md" />
   </ItemGroup>
   <ItemGroup>
