--- a/GraphTester.vcxproj.filters
+++ b/GraphTester.vcxproj.filters
@@ -23,6 +23,9 @@
     <None Include="LEARNT.md">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="classes.hpp">
